--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Moving Apple Animation</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Apel 2272018</title>
 </head>
 <body>
-    <canvas id="myCanvas" width="800" height="600" style="border:1px solid #000000;"></canvas>
-    <script src="lib.js"></script>
-    <script src="index.js"></script>
+    <canvas id="myCanvas" width="800" height="600"></canvas>
+    <script type="module" src="index.js"></script>
 </body>
 </html>
